AUTOMAKE_OPTIONS = foreign
DIST_SUBDIRS = lib src
SUBDIRS = lib src

EXTRA_DIST = \
	NEWS \
	scripts/bench \
	scripts/dun_bench.par \
	scripts/run \
	scripts/dun.par \
	scripts/dun_fast.par \
	scripts/dun_rot.par \
	scripts/dun_wind.par \
	scripts/dun_star.par \
	scripts/run_star \
	scripts/dun_scale.par \
	scripts/real_data/desert_earth.prop \
	scripts/real_data/PDF.data \
	scripts/run_cmb \
	scripts/cmb.par \
	scripts/run_ava \
	scripts/ava.par \
	scripts/ava_col.par \
	scripts/run_riv \
	scripts/riv.par \
	scripts/riv_cone.par \
	scripts/riv_sur.par \
	scripts/run_life \
	scripts/life.par \
	scripts/life2.par \
	scripts/life3.par \
	scripts/life4f.par \
	scripts/run_dif \
	scripts/dif.par \
	scripts/clean \
	scripts/dobackup \
	scripts/do_all_img \
	scripts/xrep \
	scripts/make-video \
	scripts/make-video-dirs \
	scripts/convert-images \
	scripts/encode-video \
	scripts/genesis.py \
	scripts/cellspace.py \
	scripts/matlab/read_csp.m \
	scripts/matlab/read_csp_color.m \
	scripts/matlab/read_csp_time.m \
	scripts/matlab/alti.m \
	scripts/matlab/evol_nb_cell.m

